<resources>
    <string name="app_name">OfficeCafeteria</string>
    <string name="title_activity_office_cafeteria_bottom_nav">MainActivity</string>
    <string name="title_cafeteria">Cafeteria</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="string_email">Email</string>
    <string name="string_password">Password</string>
    <string name="string_sign_up">Sign Up</string>
    <string name="string_login">Login</string>
    <string name="string_new_acc">Create a new account</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_app_id">380731663003880</string>
    <string name="fb_login_protocol_scheme">fb380731663003880</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">439b7bfb77c035a20661e34b531860aa</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_hint">example@abc.com</string>
    <string name="password_hint">At least 8 characters</string>
    <string name="not_have_any_acc">Don\'t have any account? <u>Sign Up</u></string>
    <string name="already_have_any_acc">Already  have any account? <u>Login</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Organisation_Name">Organisation Name</string>
    <string name="Employee_id_no">Employee ID No</string>
    <string name="mobile_no">Mobile No</string>
    <string name="email">E-Mail</string>
    <string name="office_cafeteria">Office Cafeteria</string>
    <string name="categories">Categories : </string>
    <string name="coffee">Coffee</string>
    <string name="wraps">Wraps</string>
    <string name="fresh_juices">Juice</string>
    <string name="pizza">Pizza</string>
    <string name="sandwich">Sandwich</string>
    <string name="burger">Burger</string>
    <string name="soup">Soup</string>
    <string name="salads">Salads</string>
    <string name="ss">ss</string>


</resources>