<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/topLayout"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/black"

        android:id="@+id/imageView"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:background="@drawable/login_bg">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/string_login"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:theme="@style/MyEditTextTheme"

            android:typeface="serif"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_email"
            android:layout_alignStart="@+id/et_email"
            android:text="@string/string_email"
            android:layout_marginTop="140dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"

            android:typeface="serif"/>



        <EditText
            android:id="@+id/et_email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_email"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:theme="@style/MyEditTextTheme"


            />


        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_password"
            android:layout_alignStart="@+id/et_password"
            android:text="@string/string_password"
            android:layout_below="@+id/et_email"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:typeface="serif"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_password"
            android:hint="@string/password_hint"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textVisiblePassword"
            android:theme="@style/MyEditTextTheme"



            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/not_hav_any_acc"
            android:layout_marginBottom="40dp"
            android:layout_centerHorizontal="true"
            android:text="@string/not_have_any_acc"
            android:textSize="20sp"
            android:typeface="serif"
            android:textColor="@color/black"
            android:layout_below="@+id/bt_login"
            android:layout_marginTop="60dp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_below="@id/et_password"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bt_layout"
            android:text="@string/string_login"
            android:textColor="@color/white"
            android:typeface="serif"
            android:textStyle="bold"
            android:layout_marginTop="100dp"
            app:cornerRadius="10dp"
            android:textSize="18sp"
            android:id="@+id/bt_login"

            />







    </RelativeLayout>

    </RelativeLayout>
    </LinearLayout>


</ScrollView>